Added Footer Section
Added the footer section with the information that was in the content page. Additionally making the social media links act like links, plus with the email address as well.

--- a/index.html
+++ b/index.html
@@ -160,5 +160,15 @@
              </section>
          </main>
 
+
+            <!-- Footer Section -->
+            <footer>
+                <p>123 Estate Lane, Wine Country, CA</p>
+                <p>(555) 123-4567</p>
+                <a href="mailto:hello@fieldandfeast.com">hello@fieldandfeast.com</a>
+
+                <a href="#" class="Instagram">Instagram</a>
+                <a href="#" class="facebook-icon">Facebook</a>
+            </footer>
     </body>
 </html>
