Fixed html & updated css
Fixed the filing of html. Adding the Root Variables & Global Styles (Fonts, body, header, and nav).

--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Field & Feast</title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="styles.css">
     </head>
 
     <body>
 
         <!-- Header Section -->
         <header>
+            <img src="images/fieldandfeast-logo.png" alt="Field & Feast Logo">
             <h1>Field & Feast</h1>
-            <br>
             <p>Harvested with Care, Served with Elegance</p>
         </header>
 
