Updates to html and css
Adding section lines in between each section. Additionally in the gallery section, making each of the photo sections into div allowing to not require a heading text as stated in the validated website.

Plus forming out the about us and main sections within css. But also fixing up the nav and body section.

--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
             </section>
 
 
+            <hr class="section-line">
+
+
             <!-- Offerings Section -->
             <section id="offerings">
                 <h2>Our Offerings</h2>
@@ -97,6 +100,9 @@
             </section>
 
 
+            <hr class="section-line">
+
+
             <!-- Gallery Section -->
              <section id="gallery">
                 <h2>A Gallery of Field & Feast</h2>
@@ -107,51 +113,51 @@
                     farm-to-table creations, each photo tells the story of our commitment to excellence.
                 </p>
 
-
-                <!-- Tomatoes Section -->
-                <section>
-                    <img src="images/tomatoes-200w.jpg" srcset="images/tomatoes-200w.jpg 200w, images/tomatoes-400w.jpg 400w, images/tomatoes-800w.jpg 800w" sizes="(min-width: 600px) 200px, (min-width: 900px) 300px, (min-width: 1200px) 600px" alt="Picture of heirloom tomatoes at ripeness">
-                    <p>
-                        Heirloom tomatoes at peak ripeness.
-                    </p>
-                </section>
-
-
-                <!-- Olive-Oil Section -->
-                <section>
-                    <img src="images/olive-oil-200w.jpg" srcset="images/olive-oil-200w.jpg 200w, images/olive-oil-400w.jpg 400w, images/olive-oil-800w.jpg 800w" sizes="(min-width: 600px) 200px, (min-width: 900px) 300px, (min-width: 1200px) 600px" alt="Picture of olive oil in natural state">
-                    <p>
-                        Drizzling golden olive oil over fresh harvest.
-                    </p>
-                </section>
+                <div class = "gallery-container">
+                    <!-- Tomatoes Section -->
+                    <div>
+                        <img src="images/tomatoes-200w.jpg" srcset="images/tomatoes-200w.jpg 200w, images/tomatoes-400w.jpg 400w, images/tomatoes-800w.jpg 800w" sizes="(min-width: 600px) 200px, (min-width: 900px) 300px, (min-width: 1200px) 600px" alt="Picture of heirloom tomatoes at ripeness">
+                        <p>
+                            Heirloom tomatoes at peak ripeness.
+                        </p>
+                    </div>
 
 
-                <!-- Table-Setting Section -->
-                 <section>
-                    <img src="images/table-setting-200w.jpg" srcset="images/table-setting-200w.jpg 200w, images/table-setting-400w.jpg 400w, images/table-setting-800w.jpg 800w" sizes="(min-width: 600px) 200px, (min-width: 900px) 300px, (min-width: 1200px) 600px" alt="Picture of table being set up">
-                    <p>
-                        Elegant tablescape under the evening sky.
-                    </p>
-                </section>
+                    <!-- Olive-Oil Section -->
+                    <div>
+                        <img src="images/olive-oil-200w.jpg" srcset="images/olive-oil-200w.jpg 200w, images/olive-oil-400w.jpg 400w, images/olive-oil-800w.jpg 800w" sizes="(min-width: 600px) 200px, (min-width: 900px) 300px, (min-width: 1200px) 600px" alt="Picture of olive oil in natural state">
+                        <p>
+                            Drizzling golden olive oil over fresh harvest.
+                        </p>
+                    </div>
 
 
-                <!-- Chef-Plating Section -->
-                 <section>
-                    <img src="images/chef-plating-200w.jpg" srcset="images/chef-plating-200w.jpg 200w, images/chef-plating-400w.jpg 400w, images/chef-plating-800w.jpg 800w" sizes="(min-width: 600px) 200px, (min-width: 900px) 300px, (min-width: 1200px) 600px" alt="Picture of a chef plating a dish">
-                    <p>
-                        Artful plating with seasonal ingredients.
-                    </p>
-                </section>
+                    <!-- Table-Setting Section -->
+                    <div>
+                        <img src="images/table-setting-200w.jpg" srcset="images/table-setting-200w.jpg 200w, images/table-setting-400w.jpg 400w, images/table-setting-800w.jpg 800w" sizes="(min-width: 600px) 200px, (min-width: 900px) 300px, (min-width: 1200px) 600px" alt="Picture of table being set up">
+                        <p>
+                            Elegant tablescape under the evening sky.
+                        </p>
+                    </div>
 
 
-                <!-- Basket Section -->
-                 <section>
-                    <img src="images/basket-200w.jpg" srcset="images/basket-200w.jpg 200w, images/basket-400w.jpg 400w, images/basket-800w.jpg 800w" sizes="(min-width: 600px) 200px, (min-width: 900px) 300px, (min-width: 1200px) 600px" alt="Picture of a basket with fresh produce">
-                    <p>
-                        Our monthly basket, curated with care.
-                    </p>
-                </section>
+                    <!-- Chef-Plating Section -->
+                    <div>
+                        <img src="images/chef-plating-200w.jpg" srcset="images/chef-plating-200w.jpg 200w, images/chef-plating-400w.jpg 400w, images/chef-plating-800w.jpg 800w" sizes="(min-width: 600px) 200px, (min-width: 900px) 300px, (min-width: 1200px) 600px" alt="Picture of a chef plating a dish">
+                        <p>
+                            Artful plating with seasonal ingredients.
+                        </p>
+                    </div>
 
+
+                    <!-- Basket Section -->
+                    <div>
+                        <img src="images/basket-200w.jpg" srcset="images/basket-200w.jpg 200w, images/basket-400w.jpg 400w, images/basket-800w.jpg 800w" sizes="(min-width: 600px) 200px, (min-width: 900px) 300px, (min-width: 1200px) 600px" alt="Picture of a basket with fresh produce">
+                        <p>
+                            Our monthly basket, curated with care.
+                        </p>
+                    </div>
+                </div>
 
                 <!-- Full Gallery "Button" Section -->
                 <a href="#" class="full-gallery">View Our Full Gallery</a>
@@ -159,6 +165,9 @@
 
             </section>
         </main>
+        
+
+        <hr class="section-line">
 
 
         <!-- Footer Section -->
