Index and Styles Update
Added class to socials to make editing easier. Additionally, added the footer section that lines up on how it looks in the image.

--- a/index.html
+++ b/index.html
@@ -176,8 +176,10 @@
             <p>(555) 123-4567</p>
             <a href="mailto:hello@fieldandfeast.com">hello@fieldandfeast.com</a>
 
-            <a href="#" class="Instagram">Instagram</a>
-            <a href="#" class="facebook-icon">Facebook</a>
+            <div class="social-media">
+                <a href="#" class="instagram">Instagram</a>
+                <a href="#" class="facebook">Facebook</a>
+            </div>
         </footer>
     </body>
 </html>
